--- a/Receitas/React com NextJS/next-05/package.json
+++ b/Receitas/React com NextJS/next-05/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^5.10.1",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "swr": "^2.2.2"
