--- a/Receitas/React com NextJS/next-05/package.json
+++ b/Receitas/React com NextJS/next-05/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^5.10.1",
+    "baseui": "^13.0.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "swr": "^2.2.2"
