--- a/Receitas/React com NextJS/next-05/package.json
+++ b/Receitas/React com NextJS/next-05/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "antd": "^5.10.1",
     "baseui": "^13.0.0",
+    "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.4",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "swr": "^2.2.2"
