--- a/Receitas/React com NextJS/next-01/package.json
+++ b/Receitas/React com NextJS/next-01/package.json
@@ -1,7 +1,6 @@
 {
   "name": "next-01",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
@@ -11,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^13.4.19"
-  }
+    "bootstrap": "^5.3.2",
+    "next": "^13.5.6",
+    "vercel": "^32.5.3"
+  },
+  "description": ""
 }
