--- a/Receitas/React com NextJS/next-01/package.json
+++ b/Receitas/React com NextJS/next-01/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "build": "^0.1.4",
     "next": "^13.5.6",
     "vercel": "^32.5.3"
   },
