--- a/Receitas/React com NextJS/next-01/package.json
+++ b/Receitas/React com NextJS/next-01/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^5.3.2",
     "build": "^0.1.4",
     "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vercel": "^32.5.3"
   },
   "description": ""
