--- a/Receitas/React com NextJS/next-01/package.json
+++ b/Receitas/React com NextJS/next-01/package.json
@@ -1,22 +1,18 @@
 {
+  "dependencies": {
+    "bootstrap": "^5.3.2",
+    "next": "^14.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "name": "next-01",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "vercel-build": "next build",
-    "dev": "next dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.3.2",
-    "build": "^0.1.4",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vercel": "^32.5.3"
-  },
   "description": ""
 }
