--- a/Receitas/React com NextJS/next-06/package.json
+++ b/Receitas/React com NextJS/next-06/package.json
@@ -18,8 +18,9 @@
     "baseui": "^13.0.0",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
-    "next": "^13.4.19",
+    "next": "^13.5.6",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swr": "^2.2.2"
   }
 }
