--- a/Receitas/React com NextJS/next-09/package.json
+++ b/Receitas/React com NextJS/next-09/package.json
@@ -10,10 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@coreui/react": "^4.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.15",
     "antd": "^5.11.5",
+    "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.5",
     "next": "^14.0.3",
+    "primereact": "^10.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "tamagui": "^1.79.1"
   }
 }
