--- a/Receitas/React com NextJS/next-09/package.json
+++ b/Receitas/React com NextJS/next-09/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@chakra-ui/react": "^2.8.2",
     "@coreui/react": "^4.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.15",
+    "@mui/material": "^5.14.18",
     "antd": "^5.11.5",
+    "babel-plugin-import": "^1.13.8",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.5",
     "next": "^14.0.3",
